--- a/css/styles.css
+++ b/css/styles.css
@@ -13,10 +13,13 @@ body {
 /* Утилиты */
 ul {
   padding: 0;
-  margin:0;
+  margin: 0;
 }
-h1,h2,h3,p {
-  margin:0;
+h1,
+h2,
+h3,
+p {
+  margin: 0;
 }
 .image {
   display: block;
@@ -25,8 +28,8 @@ h1,h2,h3,p {
   margin-left: auto;
   margin-right: auto;
   width: 1158px;
-  padding-left: 12px;
-  padding-right: 12px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .no-decor {
   text-decoration: none;
@@ -35,9 +38,13 @@ h1,h2,h3,p {
   list-style-type: none;
 }
 /* Шапка */
-.navigation {
+.box {
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+.nav-list {
   display: flex;
-  flex-wrap: wrap;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -55,6 +62,7 @@ h1,h2,h3,p {
 .logo-accent {
   display: inline-block;
   margin-right: 77px;
+  padding: 24px 0;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
@@ -64,6 +72,12 @@ h1,h2,h3,p {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--main-color);
+}
+.list-nav {
+  display: flex;
+}
+.item-nav:nth-child(-n + 2) {
+  margin-right: 40px;
 }
 .link-nav {
   display: inline-block;
@@ -82,10 +96,8 @@ h1,h2,h3,p {
 .link-nav:active {
   color: var(--accent-color);
 }
-.social-list {
-  display: inline-block;
-
-    font-size: 16px;
+.social-link {
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--second-color);
@@ -94,27 +106,31 @@ h1,h2,h3,p {
   margin-right: 40px;
 }
 
-}
-.social-list:hover {
+.social-link:hover {
   color: var(--accent-color);
 }
-.social-list:focus {
+.social-link:focus {
   color: var(--accent-color);
 }
 /* Герой */
 .hero {
   background-color: var(--main-color);
+  padding-bottom: 192px;
 }
 .hero-title {
+  padding-top: 192px;
+  margin-bottom: 48px;
   font-weight: 600;
   font-size: 56px;
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--white-color);
-  
 }
 .hero-btn {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 16px 32px;
   font-family: "Roboto", sans-serif;
   font-weight: 600;
   font-size: 16px;
@@ -124,14 +140,28 @@ h1,h2,h3,p {
   letter-spacing: 0.04em;
   color: var(--white-color);
   background-color: var(--accent-color);
-  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
   cursor: pointer;
 }
 .hero-btn:active {
   background: #404bbf;
 }
 /* Преимущества */
+.dignity-list {
+  display: flex;
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.dignity-item {
+  display: inline-block;
+  margin-right: 24px;
+}
+.dignity-item:last-child {
+  margin-right: 0;
+}
 .subtitle {
+  margin-bottom: 8px;
   font-weight: 600;
   font-size: 20px;
   line-height: 1.2;
@@ -145,6 +175,7 @@ h1,h2,h3,p {
 }
 /* Продукт */
 .title {
+  margin-bottom: 72px;
   font-weight: 600;
   font-size: 36px;
   line-height: 1.11;
@@ -152,13 +183,48 @@ h1,h2,h3,p {
   letter-spacing: 0.02em;
   text-transform: capitalize;
 }
+.image-list {
+  display: flex;
+  padding-bottom: 120px;
+}
+.image-item {
+  margin-right: 24px;
+}
+.image-item:last-child {
+  margin-right: 0;
+}
 /* Команда */
 .team {
   background-color: var(--cloud-color);
+  padding-top: 120px;
+}
+.team-list {
+  display: flex;
+  padding-bottom: 120px;
+}
+.team-item {
+  margin-right: 24px;
+  text-align: center;
+  padding-bottom: 32px;
+  background: var(--white-color);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
+}
+.team-item:last-child {
+  margin-right: 0;
+}
+.team-item > img {
+  margin-bottom: 32px;
+}
+.team-item > h3 {
+  margin-bottom: 8px;
 }
 /* Футер */
 .footer {
-  background-color: var(--main-color)
+  background-color: var(--main-color);
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .logo-accent-white {
   font-family: "Raleway", sans-serif;
@@ -172,6 +238,8 @@ h1,h2,h3,p {
   color: var(--cloud-color);
 }
 .text-white {
+  margin-top: 16px;
+  max-width: 264px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -180,7 +248,16 @@ h1,h2,h3,p {
 
 /* Страница портфолио */
 /* Фильтры */
+.btn-list {
+  display: flex;
+  justify-content: center;
+  padding-top: 96px;
+}
+.btn-item {
+  margin-right: 24px;
+}
 .filters-btn {
+  padding: 12px 24px;
   font-family: "Roboto", sans-serif;
   font-weight: 600;
   font-size: 16px;
@@ -190,13 +267,15 @@ h1,h2,h3,p {
   text-align: center;
   letter-spacing: 0.04em;
   color: var(--accent-color);
-  background-color: var(--cornflover-color);
-  border: none;
+  border: 1px solid var(--cornflover-color);
+  border-radius: 4px;
   cursor: pointer;
 }
 .filters-btn:hover {
   color: var(--white-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .filters-btn:focus {
   color: var(--white-color);
@@ -208,4 +287,35 @@ h1,h2,h3,p {
   letter-spacing: 0.02em;
   color: var(--cloud-color);
   background-color: var(--accent-color);
+}
+.examples-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-top: 72px;
+  padding-bottom: 120px;
+}
+.examples-item {
+  border: 0.5px solid var(--cloud-color);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+  margin-right: 24px;
+  margin-bottom: 48px;
+}
+.examples-item:nth-child(3n) {
+  margin-right: 0;
+}
+.examples-item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+.examples-item > a {
+  display: inline-block;
+  margin-bottom: 32px;
+}
+.examples-item > h3 {
+  margin-bottom: 8px;
+  padding-left: 16px;
+}
+.examples-item > p {
+  padding-bottom: 32px;
+  padding-left: 16px;
 }
