--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,10 @@ p {
   align-items: center;
   justify-content: space-between;
 }
-
+.box > .container {
+  padding-top: 14px;
+  padding-bottom: 14px;
+}
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 800;
@@ -61,8 +64,13 @@ p {
 }
 .logo-accent {
   display: inline-block;
-  margin-right: 77px;
-  padding: 24px 0;
+  padding-top: 10px;
+  padding-right: 10px;
+
+  padding-bottom: 10px;
+  padding-left: 10px;
+
+  margin-right: 57px;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
@@ -77,10 +85,15 @@ p {
   display: flex;
 }
 .item-nav:nth-child(-n + 2) {
-  margin-right: 40px;
+  margin-right: 20px;
 }
 .link-nav {
   display: inline-block;
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+
   font-weight: 600;
   font-size: 16px;
   line-height: 1.5;
@@ -97,13 +110,18 @@ p {
   color: var(--accent-color);
 }
 .social-link {
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--second-color);
 }
-.social-list:first-child {
-  margin-right: 40px;
+.social-item:first-child {
+  margin-right: 20px;
 }
 
 .social-link:hover {
@@ -116,9 +134,9 @@ p {
 .hero {
   background-color: var(--main-color);
   padding-bottom: 192px;
+  padding-top: 192px;
 }
 .hero-title {
-  padding-top: 192px;
   margin-bottom: 48px;
   font-weight: 600;
   font-size: 56px;
@@ -141,6 +159,7 @@ p {
   color: var(--white-color);
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
   border-radius: 4px;
   cursor: pointer;
 }
@@ -148,10 +167,12 @@ p {
   background: #404bbf;
 }
 /* Преимущества */
-.dignity-list {
-  display: flex;
+.dignity > .container {
   padding-top: 120px;
   padding-bottom: 120px;
+}
+.dignity-list {
+  display: flex;
 }
 .dignity-item {
   display: inline-block;
@@ -174,6 +195,9 @@ p {
   color: var(--second-color);
 }
 /* Продукт */
+.product > .container {
+  padding-bottom: 120px;
+}
 .title {
   margin-bottom: 72px;
   font-weight: 600;
@@ -185,7 +209,6 @@ p {
 }
 .image-list {
   display: flex;
-  padding-bottom: 120px;
 }
 .image-item {
   margin-right: 24px;
@@ -197,10 +220,10 @@ p {
 .team {
   background-color: var(--cloud-color);
   padding-top: 120px;
+  padding-bottom: 120px;
 }
 .team-list {
   display: flex;
-  padding-bottom: 120px;
 }
 .team-item {
   margin-right: 24px;
@@ -247,14 +270,20 @@ p {
 }
 
 /* Страница портфолио */
+.portfolio > .container {
+  padding-top: 96px;
+  padding-bottom: 120px;
+}
 /* Фильтры */
 .btn-list {
   display: flex;
   justify-content: center;
-  padding-top: 96px;
 }
 .btn-item {
   margin-right: 24px;
+}
+.btn-item:last-child {
+  margin-right: 0;
 }
 .filters-btn {
   padding: 12px 24px;
@@ -267,6 +296,7 @@ p {
   text-align: center;
   letter-spacing: 0.04em;
   color: var(--accent-color);
+  background: var(--cloud-color);
   border: 1px solid var(--cornflover-color);
   border-radius: 4px;
   cursor: pointer;
@@ -274,12 +304,16 @@ p {
 .filters-btn:hover {
   color: var(--white-color);
   background-color: var(--accent-color);
+  border: 1px solid var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .filters-btn:focus {
   color: var(--white-color);
   background-color: var(--accent-color);
+  border: 1px solid var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .text-cloud {
   font-size: 16px;
@@ -288,16 +322,24 @@ p {
   color: var(--cloud-color);
   background-color: var(--accent-color);
 }
+.examples-link {
+  color: var(--main-color);
+}
 .examples-list {
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
   margin-top: 72px;
-  padding-bottom: 120px;
+}
+.examples-descr {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 16px;
+  border-right: 0.5px solid var(--cloud-color);
+  border-bottom: 0.5px solid var(--cloud-color);
+  border-left: 0.5px solid var(--cloud-color);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .examples-item {
-  border: 0.5px solid var(--cloud-color);
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
   margin-right: 24px;
   margin-bottom: 48px;
 }
@@ -306,16 +348,4 @@ p {
 }
 .examples-item:nth-last-child(-n + 3) {
   margin-bottom: 0;
-}
-.examples-item > a {
-  display: inline-block;
-  margin-bottom: 32px;
-}
-.examples-item > h3 {
-  margin-bottom: 8px;
-  padding-left: 16px;
-}
-.examples-item > p {
-  padding-bottom: 32px;
-  padding-left: 16px;
 }
